--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Christopher Werner # your name (or website title) here
-logo: "me.png" # your photo (or logo) here
+logo: "images/me.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
